workspace = { members = [ "log","log_macro"] }
[package]
name = "stlog"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = { path = "log" }
log_macro = { path = "log_macro" }

serde = "*"
bincode = "*"
serde_derive = "*"
serde_json = "*"
constructor = "*"
lazy_static = "*"
cueue = "*"
