[package]
name = "log_macro"
version = "0.1.0"
edition = "2021"

[lib]
proc-macro = true

[dependencies]
log = { path = "../log" }
syn = { version = "1", features = ["full"] }
quote = "1"
proc-macro2 = "1"
lazy_static = "1"
constructor = "*"
inventory = "*"
serde = "*"
bincode = "*"
serde_derive = "*"
serde_json = "*"
